functioning change to site tech, right justified more (need to fix inner alignments)

--- a/app/sass/components/_site.scss
+++ b/app/sass/components/_site.scss
@@ -111,17 +111,27 @@
 
 		&--more {
 			margin: 0 auto;
-			display: inline-block;
+			display: flex;
 			border-radius: 4px 4px 0 0;
-			background-color: rgba($color-green-dark, .8);
 			color: $color-white;
 			font-weight: 400;
 			transition: all .2s;
 
+			&-empty {
+				width: 80%;
+			}
+
 			&-text {
+				background-color: rgba($color-green-dark, .8);
+				width: 20%;
 				display: flex;
 				align-items: center;
-				margin: 0 2rem;
+				padding: 0 2rem;
+
+				&:hover {
+					background-color: $color-red-light;
+					cursor:pointer;
+				}
 
 				svg {
 					height: 3rem;
@@ -138,11 +148,6 @@
 				}
 			}
 
-			&:hover {
-				background-color: $color-red-light;
-				cursor:pointer;
-
-			}
 		}
 	}
 
